--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Catalogo de productos</string>
+    <string name="description">Description</string>
+    <string name="search_title">Búsquedas realizadas:</string>
+    <string name="search">Buscar</string>
+    <string name="product_title">Producto</string>
 </resources>
